--- a/gradle.properties
+++ b/gradle.properties
@@ -9,7 +9,7 @@ loader_version=0.7.2+build.175
 
 # Mod Properties
 mod_version = 1.0.0
-maven_group = io.github.cottonmc
+maven_group = com.elytradev
 archives_base_name = infraredstone
 
 # Dependencies
