--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ repositories {
 	maven { url "http://maven.fabricmc.net/" } // Fabric maven - home of Fabric API and ModMenu
 	maven { url "http://server.bbkr.space:8081/artifactory/libs-release" } // Cotton maven - home of Cotton projects
 	maven { url "https://maven.abusedmaster.xyz" } // NerdHub maven - home of Cardinal Components
+	maven { url "https://minecraft.curseforge.com/api/maven" }
 }
 
 dependencies {
@@ -34,7 +35,10 @@ dependencies {
 	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 	compileOnly "com.google.code.findbugs:jsr305:3.0.2"
-	modRuntime fileTree(dir: "run/libs", include: "*.jar")
+	modApi "io.github.prospector:modmenu:1.8.4+build.20"
+
+	// excluding because we want to avoid an old, broken version of modmenu
+	modImplementation("me.shedaniel:RoughlyEnoughItems:3.3.8") { exclude module: "ModMenu" }
 }
 
 processResources {
