--- a/build.gradle
+++ b/build.gradle
@@ -84,8 +84,8 @@ publishing {
 		    name = "GitHubPackages"
 		    url = uri("https://maven.pkg.github.com/infraredstone/infraredstone")
 		    credentials {
-			username = project.findProperty("gpr.user") ?: System.getenv("boundarybreaker")
-			password = project.findProperty("gpr.key") ?: System.getenv("901b0c80688deea2504453795d4ab5ea4ae6891f")
+			username = project.findProperty("gpr.user") ?: System.getenv("USERNAME")
+			password = project.findProperty("gpr.key") ?: System.getenv("PASSWORD")
 		    }
 		}
 	}
